небольшие корректировки